kubernetes/postgres1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres1-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: postgres1
  ports:
    - port: 5432
      targetPort: 5432
