kubernetes/postgres2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres2-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: postgres2
  ports:
    - port: 5432
      targetPort: 5432
