kubernetes/postgres3-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres3-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: postgres3
  ports:
    - port: 5432
      targetPort: 5432
