kubernetes/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "100172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "100172800"
spec:
  rules:
    - http:
        paths:
          - path : /
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
